# metacognitive-uncertainty-calibration-for-llm-knowledge-boundaries

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: evaluate.py  train.py
src/metacognitive_uncertainty_calibration_for_llm_knowledge_boundaries/: __init__.py
src/metacognitive_uncertainty_calibration_for_llm_knowledge_boundaries/evaluation/: __init__.py  metrics.py
src/metacognitive_uncertainty_calibration_for_llm_knowledge_boundaries/models/: __init__.py  model.py
src/metacognitive_uncertainty_calibration_for_llm_knowledge_boundaries/training/: __init__.py  trainer.py
src/metacognitive_uncertainty_calibration_for_llm_knowledge_boundaries/utils/: __init__.py  config.py  constants.py
tests/: __init__.py  conftest.py  test_config_comprehensive.py  test_data.py  test_model.py  test_model_errors.py  test_preprocessing_comprehensive.py  test_training.py
