[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "metacognitive-uncertainty-calibration-for-llm-knowledge-boundaries"
version = "0.1.0"
description = "A novel metacognitive layer that learns to predict when LLMs will fail on MMLU questions by analyzing internal uncertainty signals."
authors = [{name = "A-SHOJAEI"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["machine learning", "uncertainty quantification", "transformers", "nlp", "mmlu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.25.0",
    "datasets>=2.10.0",
    "evaluate>=0.4.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.9.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0",
    "mlflow>=2.3.0",
    "wandb>=0.15.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/A-SHOJAEI/metacognitive-uncertainty-calibration-for-llm-knowledge-boundaries"
Repository = "https://github.com/A-SHOJAEI/metacognitive-uncertainty-calibration-for-llm-knowledge-boundaries"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true